fix nlbw dark mode

--- a/htdocs/luci-static/argon/css/style.css
+++ b/htdocs/luci-static/argon/css/style.css
@@ -1929,7 +1929,7 @@ div>.table>.tbody>.tr:nth-of-type(2n) {
 
 .main>.main-left>.nav>.slide>.menu[data-title=Logout]:before {
     content: "\e907";
-    color: #32325d !important;
+    color: #e45ea8 !important;
 }
 
 .main>.main-left>.nav>.slide>.menu:after {
@@ -4286,10 +4286,10 @@ header>.container>.pull-right>* {
     }
 
     #detail-bubble>div {
-        border: 1px solid #ccc;
-        border-radius: 2px;
-        padding: 5px;
-        background: #252525;
+        border: 1px solid #ccc !important;
+        border-radius: 2px !important;
+        padding: 5px !important;
+        background: #252525 !important;
     }
 
 }
